application/iptables/iptables.txt
# 80 forward 9999
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 9999


# cat /etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Thu May 26 17:22:19 2016
*nat
:PREROUTING ACCEPT [227785:17862144]
:POSTROUTING ACCEPT [525099:31852640]
:OUTPUT ACCEPT [525099:31852640]
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 9999
COMMIT
# Completed on Thu May 26 17:22:19 2016
# Generated by iptables-save v1.4.7 on Thu May 26 17:22:19 201
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 873 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1111 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1935 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5659 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 7777 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8888 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9999 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 11211 -j ACCEPT
-A INPUT -p tcp -m tcp -s 10.252.252.112/32 --dport 873 -j ACCEPT  #只允许运维对接服务器连接本机的rsync 873服务
-A INPUT -p tcp -m tcp -s 10.66.69.13/32 --dport 873 -j ACCEPT  #只允许bb内网机器连接rsync
-A INPUT -p tcp -m tcp -s 10.66.69.13/32 --dport 9999 -j ACCEPT  #只允许bb内网机器连接svn
-A INPUT -p tcp -m tcp -s 10.5.9.22/32 --dport 9999 -j ACCEPT  #只允许aa内网机器连接svn
-A INPUT -m state --state NEW -m tcp -p tcp -s 10.5.9.22/32 --dport 2631 -j ACCEPT   #只允许aa内网机器连接ssh
-A INPUT -m state --state NEW -m tcp -p tcp -s 10.66.69.13/32 --dport 2631 -j ACCEPT
#只允许bb内网机器连接ssh
-A INPUT -p tcp --dport 2631 -j DROP #解决所有服务ssh请求，这条放在下面
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
